vendor/cache/ruby/2.6.0/extensions/x86_64-darwin-20/2.6.0/pg-0.17.1/gem_make.out
current directory: /Users/motti/Dropbox/My Mac (teihonnaoyanoMacBook-Pro.local)/Desktop/reservation_app/vendor/cache/ruby/2.6.0/gems/pg-0.17.1/ext
/Users/motti/.rbenv/versions/2.6.6/bin/ruby -I /Users/motti/.rbenv/versions/2.6.6/lib/ruby/site_ruby/2.6.0 -r ./siteconf20210619-73367-15fv5wd.rb extconf.rb --with-pg-config\=/Applications/Postgres.app/Contents/MacOS/bin/pg_config
Using config values from /Applications/Postgres.app/Contents/MacOS/bin/pg_config
sh: /Applications/Postgres.app/Contents/MacOS/bin/pg_config: No such file or directory
sh: /Applications/Postgres.app/Contents/MacOS/bin/pg_config: No such file or directory
checking for libpq-fe.h... yes
checking for libpq/libpq-fs.h... yes
checking for pg_config_manual.h... yes
checking for PQconnectdb() in -lpq... yes
checking for PQconnectionUsedPassword()... yes
checking for PQisthreadsafe()... yes
checking for PQprepare()... yes
checking for PQexecParams()... yes
checking for PQescapeString()... yes
checking for PQescapeStringConn()... yes
checking for PQescapeLiteral()... yes
checking for PQescapeIdentifier()... yes
checking for PQgetCancel()... yes
checking for lo_create()... yes
checking for pg_encoding_to_char()... yes
checking for pg_char_to_encoding()... yes
checking for PQsetClientEncoding()... yes
checking for PQlibVersion()... yes
checking for PQping()... yes
checking for PQsetSingleRowMode()... yes
checking for rb_encdb_alias()... yes
checking for rb_enc_alias()... yes
checking for rb_thread_call_without_gvl()... yes
checking for rb_thread_call_with_gvl()... yes
checking for rb_thread_fd_select()... yes
checking for rb_w32_wrap_io_handle()... no
checking for PGRES_COPY_BOTH in libpq-fe.h... yes
checking for PGRES_SINGLE_TUPLE in libpq-fe.h... yes
checking for PG_DIAG_TABLE_NAME in libpq-fe.h... yes
checking for struct pgNotify.extra in libpq-fe.h... yes
checking for unistd.h... yes
checking for ruby/st.h... yes
creating extconf.h
creating Makefile

current directory: /Users/motti/Dropbox/My Mac (teihonnaoyanoMacBook-Pro.local)/Desktop/reservation_app/vendor/cache/ruby/2.6.0/gems/pg-0.17.1/ext
make DESTDIR\= clean

current directory: /Users/motti/Dropbox/My Mac (teihonnaoyanoMacBook-Pro.local)/Desktop/reservation_app/vendor/cache/ruby/2.6.0/gems/pg-0.17.1/ext
make DESTDIR\=
compiling gvl_wrappers.c
compiling pg.c
compiling pg_connection.c
pg_connection.c:2323:3: error: implicit declaration of function 'gettimeofday' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
                gettimeofday(&currtime, NULL);
                ^
pg_connection.c:2340:4: error: implicit declaration of function 'gettimeofday' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
                        gettimeofday(&currtime, NULL);
                        ^
2 errors generated.
make: *** [pg_connection.o] Error 1

make failed, exit code 2
